--- a/test/router/lifecycle-events.spec.html
+++ b/test/router/lifecycle-events.spec.html
@@ -1866,6 +1866,24 @@
           const event = onRouteChanged.args[0][0];
           expect(event.detail.router).to.equal(router);
         });
+
+        it('should be triggered after location update', async() => {
+          router.setRoutes([
+            {path: '/admin', component: 'x-admin-view'},
+          ]);
+
+          let pathname;
+          const checkLocation = () => {
+            expect(router).to.have.deep.property('location.pathname', '/admin');
+            pathname = window.location.pathname;
+          };
+
+          window.addEventListener('vaadin-router-location-changed', checkLocation);
+          await router.render('/admin', true);
+          window.removeEventListener('vaadin-router-location-changed', checkLocation);
+
+          expect(pathname).to.equal('/admin');
+        });
       });
 
       describe('the global `vaadin-router-error` event', () => {
