--- a/test/router/parent-layouts.spec.html
+++ b/test/router/parent-layouts.spec.html
@@ -208,6 +208,30 @@
         checkOutlet(['x-fallback']);
       });
 
+      it('should render the matching child route even if it is not under the first matching parent', async() => {
+        router.setRoutes([
+          {
+            path: '/',
+            component: 'x-layout-a',
+            children: [
+              {path: '/a', component: 'x-a'},
+            ]
+          },
+          {
+            path: '/',
+            component: 'x-layout-b',
+            children: [
+              {path: '/b', component: 'x-b'}
+            ]
+          },
+        ]);
+
+        await router.render('/b');
+
+        verifyActiveRoutes(router, ['/', '/b']);
+        checkOutlet(['x-layout-b', 'x-b']);
+      });
+
       it('redirect property amends previous path', async() => {
         router.setRoutes([
           {path: '/a', component: 'x-a', children: [
