chore: use node_modules/ instead of bower_components/ in the tests

--- a/test/index.coverage.html
+++ b/test/index.coverage.html
@@ -9,8 +9,8 @@
     We can use npm package in tests, but in the demos we still need HTML Imports support.
     This is the only reason to use Bower for the vaadin-router package.
   -->
-  <script src="../bower_components/web-component-tester/browser.js"></script>
-  <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+  <script src="../node_modules/web-component-tester/browser.js"></script>
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
   <script src="test-suites.js"></script>
 
   <script src="../dist/test-iife/resolver/path-to-regexp.js"></script>
