--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>router.spec</title>
-  <script src="../../bower_components/web-component-tester/browser.js"></script>
-  <script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+  <script src="../../node_modules/web-component-tester/browser.js"></script>
+  <script src="../../node_modules/@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
   <script src="../../dist/vaadin-router.umd.js"></script>
   <script src="test-utils.js"></script>
 
