--- a/test/triggers/click.spec.html
+++ b/test/triggers/click.spec.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>CLICK Navigation Trigger tests</title>
-  <script src="../../bower_components/web-component-tester/browser.js"></script>
-  <script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+  <script src="../../node_modules/web-component-tester/browser.js"></script>
+  <script src="../../node_modules/@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
   <script src="../../dist/test-iife/triggers/click.js"></script>
 
   <base href="/">
