fix lint errors

--- a/test/triggers/click.spec.html
+++ b/test/triggers/click.spec.html
@@ -287,7 +287,7 @@
 
           it('should scroll to top on click event', () => {
             const div = document.createElement('div');
-            div.setAttribute("style", "width:2000px; height:2000px;");
+            div.setAttribute('style', 'width:2000px; height:2000px;');
             document.body.append(div);
 
             window.scrollTo(10, 10);
@@ -305,7 +305,7 @@
             preventNavigationDefault = false;
 
             const div = document.createElement('div');
-            div.setAttribute("style", "width:2000px; height:2000px;");
+            div.setAttribute('style', 'width:2000px; height:2000px;');
             document.body.append(div);
 
             window.scrollTo(10, 10);
