--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -108,53 +108,48 @@
         });
 
         describe('baseUrl', () => {
+          const baseElement = document.createElement('base');
+
+          beforeEach(() => {
+            baseElement.removeAttribute('href');
+            document.head.appendChild(baseElement);
+          });
+
+          afterEach(() => {
+            document.head.removeChild(baseElement);
+          });
+
           it('should accept baseUrl in options object as the 2nd argument', () => {
             router = new Vaadin.Router(null, {baseUrl: '/users/'});
             expect(router).to.have.property('baseUrl', '/users/');
           });
 
           it('should use <base href> as default baseUrl', () => {
-            const baseElement = document.createElement('base');
             baseElement.setAttribute('href', '/foo/');
-            document.head.appendChild(baseElement);
 
             router = new Vaadin.Router(null);
-            expect(router).to.have.property('baseUrl', '/foo/');
-
-            document.head.removeChild(baseElement);
+            expect(router).to.have.property('baseUrl', location.origin + '/foo/');
           });
 
           it('should resolve relative base href when setting baseUrl', async() => {
-            const baseElement = document.createElement('base');
             baseElement.setAttribute('href', './foo/../bar/asdf');
-            document.head.appendChild(baseElement);
 
             router = new Vaadin.Router(null);
-            expect(router).to.have.property('baseUrl', '/bar/');
-
-            document.head.removeChild(baseElement);
+            expect(router).to.have.property('baseUrl', location.origin + '/bar/');
           });
 
           it('should use absolute base href when setting baseUrl', async() => {
-            const baseElement = document.createElement('base');
             baseElement.setAttribute('href', '/my/base/');
-            document.head.appendChild(baseElement);
 
             router = new Vaadin.Router(null);
-            expect(router).to.have.property('baseUrl', '/my/base/');
-
-            document.head.removeChild(baseElement);
+            expect(router).to.have.property('baseUrl', location.origin + '/my/base/');
           });
 
           it('should use custom base href when setting baseUrl', async() => {
-            const baseElement = document.createElement('base');
             baseElement.setAttribute('href', 'http://localhost:8080/my/custom/base/');
-            document.head.appendChild(baseElement);
 
             router = new Vaadin.Router(null);
-            expect(router).to.have.property('baseUrl', '/my/custom/base/');
-
-            document.head.removeChild(baseElement);
+            expect(router).to.have.property('baseUrl', 'http://localhost:8080/my/custom/base/');
           });
 
           it('should use baseUrl when matching relative routes', async() => {
@@ -184,6 +179,18 @@
             }
 
             await router.render('/foo/home');
+            checkOutlet(['x-home-view']);
+          });
+
+          it('should not throw when base path starts with double slash', async() => {
+            baseElement.setAttribute('href', location.origin + '//foo');
+
+            router = new Vaadin.Router(outlet);
+            expect(router).to.have.property('baseUrl', location.origin + '//');
+
+            router.setRoutes([{path: '(.*)', component: 'x-home-view'}]);
+
+            await router.render('//');
             checkOutlet(['x-home-view']);
           });
         });
